--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "game",
   "version": "1.0.0",
   "description": "a game",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server",
+    "build": "webpack",
+    "serv": "static build",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -13,6 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sass": "^1.30.0"
+    "sass": "^1.30.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "express": "^4.17.1",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
